[package]
name = "microbit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }

cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
embedded-hal = "0.2.7"
microbit-v2 = "0.13.0"

nb = "1.0"
heapless = "0.7.16"